src/main/java/com/example/librarymanagementsystem/error/ResourceAlreadyExistException.java
package com.example.librarymanagementsystem.error;

public class ResourceAlreadyExistException extends RuntimeException {
    public ResourceAlreadyExistException(String message) {
        super(message);
    }
}
